@@ -1,3 +1,6 @@
+2004-11-22 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
+   * src/gdcmFile.h : fix compilation errors on zorglub linuc computer
+
 2004-11-19 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
    * src/gdcmDocEntry.cxx : remove the copy of the DictEntry... there isn't
      correct to copy it. The DictEntry is specified at the DocEntry creation,
